Fix Datastore CGLIB usage on JDK 16
Fixes:
```
org.springframework.cglib.core.CodeGenerationException: java.lang.IllegalAccessException-->module java.base does not open java.util to unnamed module @2b834e36
	at com.google.cloud.spring.data.datastore.core.DatastoreTemplateTests.saveTestNotInterfaceLazy(DatastoreTemplateTests.java:571)
Caused by: java.lang.IllegalAccessException: module java.base does not open java.util to unnamed module @2b834e36
	at com.google.cloud.spring.data.datastore.core.DatastoreTemplateTests.saveTestNotInterfaceLazy(DatastoreTemplateTests.java:571)
```