@@ -186,7 +186,7 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven-surefire-plugin.version}</version>
 					<configuration>
-						<argLine>-Xms512m -Xmx512m</argLine>
+						<argLine>-Xms512m -Xmx512m --illegal-access=permit</argLine>
 						<skip>${skip.surefire.tests}</skip>
 						<excludes>
 							<exclude>${integration-test.pattern}</exclude>
